# _udemy-MCP-MCP_masterclass_complete_guide_to_MCP_in_Python

./: .gitignore  README.md
Client/: pyproject.toml
Weather/: pyproject.toml  weather.py
http-streamable-mcp-server/: main.py  pyproject.toml
mcp-build-chess-stat/: README.md  main.py  pyproject.toml
mcp-build-client/: chat_ui.py  main.py  pyproject.toml
mcp-build-memory-tracker/: pyproject.toml  server.py
mcp-client/: client_simple.py  pyproject.toml  server.py
mcp-primitives-and-inputs/: prompt.py  pyproject.toml  resources.py
mcp-server-deployment/: README.md  pyproject.toml
mcp-server-deployment/src/mcpserver/: deployment.py
mcp-server-functionality/: .gitignore  local.py  pyproject.toml  websearch.py
