[project]
name = "mcp-server-functionality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.26.0",
    "openai>=2.21.0",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pyscreeze>=1.0.1",
    "requests>=2.32.5",
]
